Refactor some magic numbers, remove Constants class
Update dependencies where possible in gradle. Some dependencies have
security vulnerabilities. On that note, we should use log4j when
possible